implemented home page - CSS animation - Social media navbar

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,6 +33,12 @@ import Header from '../components/Header.astro';
 			rgb(var(--accent-light)) 30%,
 			white 60%
 		);
+		--accent-gradient-purp: linear-gradient(
+			45deg,
+			rgb(126, 85, 182),       
+			rgb(121, 77, 209) 30%,
+			rgb(230, 230, 250) 60% 
+		);
 	}
 	html {
 		font-family: system-ui, sans-serif;
