fix grammar mistake on index.astro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import ShapesBackground from "../components/ShapesBackground.astro";
         <span class="welcome-text-gradient">Welcome</span> 👋
       </h1>
       <p class="introduction">
-        I'm <span class="text-gradient">Pinapelz</span> a Software Engineering
+        I'm <span class="text-gradient">Pinapelz</span>, a Software Engineering
         student at UC Irvine
       </p>
       <p class="introduction">
