--- a/src/components/DiscordStatus.astro
+++ b/src/components/DiscordStatus.astro
@@ -13,11 +13,18 @@ const statusColors = {
   offline: "#747f8d",
 };
 
+const statusText = {
+  online: "Online",
+  idle: "Idle",
+  dnd: "Do Not Disturb",
+  offline: "Offline",
+}
+
 ---
 
 <section style={`background-color: ${statusColors[discordStatus]};`}>
     <img src="https://assets-global.website-files.com/6257adef93867e50d84d30e2/636e0a6ca814282eca7172c6_icon_clyde_white_RGB.svg"alt={`${discordUser.username}'s Avatar`} />
-    <h2>Status: {discordStatus}</h2>
+    <h2>Status: {statusText[discordStatus]}</h2>
 </section>
 <style>
     section {
