--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -59,4 +59,28 @@
     border-radius: 50%;
     margin-left: 1rem;
   }
+
+  @media only screen and (max-width: 1020px) {
+    header {
+      flex-direction: column;
+      padding: 1rem;
+    }
+
+    nav {
+      margin-top: 1rem;
+    }
+
+    nav ul {
+      flex-direction: column;
+      align-items: center;
+    }
+
+    nav li {
+      margin: 0.5rem 0;
+    }
+
+    #profilePic {
+      margin: 1rem 0 0;
+    }
+  }
 </style>
