add idle message to Discord Activity

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -20,9 +20,9 @@ import DiscordActivity from "../components/DiscordActivity.astro";
     </div>
     <div class="grid-item">
       <p class="introduction">
-        <h2>推しししししし!!!!</h2>
-        <img src="https://files.pinapelz.com/FM5RJDxUYAMqkOF.jpeg" style="width: 350px; height: auto; align-items: center; margin-bottom: 15px;"/>
-        <img src="https://files.catbox.moe/zawgke.webp" style="width: 300px; height: auto; align-items: right;"/>
+        <h2>推し!!!!</h2>
+        <a href="https://www.youtube.com/@ErinaMakina"><img src="https://files.pinapelz.com/FM5RJDxUYAMqkOF.jpeg" style="width: 350px; height: auto; align-items: center; margin-bottom: 15px;"/></a>
+        <a href="https://www.youtube.com/@Rosemi_Lovelock"><img src="https://files.catbox.moe/zawgke.webp" style="width: 300px; height: auto; align-items: right;"/></a>
       </p>
   </div>
     <div class="grid-item">
