added MAL to about section and refactor style

--- a/src/components/DiscordActivity.astro
+++ b/src/components/DiscordActivity.astro
@@ -10,7 +10,7 @@
                 const activities = data.data.activities;
                 let activityHTML = "";
                 if (activities.length === 0) {
-                    activityHTML = "<p>Not doing anything at the moment</p>";
+                    activityHTML = "<p>Not doing anything at the moment :(</p>";
                 } else {
                     for (const activity of activities) {
                         const imageUrl =
