--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,6 +2,7 @@
   <nav>
     <ul>
       <li><a href="/">Home</a></li>
+      <li><a href="/coursework">Coursework</a></li>
       <li><a href="/projects">Projects</a></li>
       <li><a href="/about">About</a></li>
     </ul>
