add socialnavbar to coursework page

--- a/src/pages/coursework.astro
+++ b/src/pages/coursework.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import SocialNavbar from "../components/SocialNavbar.astro";
 
-// Replace the arrays below with your actual coursework data
 const icsCourses = [
   {
     title: "I&C SCI 31 -  Introduction to Programming",
@@ -185,3 +185,4 @@ const in4mtxCourses = [
     color: white;
   }
 </style>
+<SocialNavbar />
