add new lanyard card visualizer to about

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -18,13 +18,15 @@ import RSSFeed from "../components/RSSFeed.astro";
     </div>
     <div class="grid-item">
       <h2 style="margin-bottom: 30px;">What am I up to right now?</h2>
-      <DiscordStatus />
-      <DiscordActivity />
+      <div style="display: flex; justify-content: center;">
+        <a href="https://discord.com/users/246787839570739211"><img src="https://lanyard.cnrad.dev/api/246787839570739211" style="width: 650px; height: auto; margin-bottom: 10px;" /></a>
+      </div>
+      <DiscordStatus/>
       <p style="font-size: 1.3rem;">Yes. Its a live status of my Discord status</p>
       <a style="font-size: small;" href="https://github.com/Phineas/lanyard">Live data courtesy of Lanyard</a>
     </div>
     <div class="grid-item"> 
-      <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=pinapelz&layout=pie&hide=makefile&theme=dark&langs_count=12" alt="Github Language Stats" style="width: 400px; height: auto" >
+      <a><img src="https://github-readme-stats.vercel.app/api/top-langs/?username=pinapelz&layout=pie&hide=makefile&theme=dark&langs_count=12" alt="Github Language Stats" style="width: 400px; height: auto" >
       <p style="font-size: large; line-height: 1.4;">The first programming language I ever learned was Java, although after learning Python, that has become what I primarily use
         since its super easy to just get something running. A lot of my C++ experince comes from competitive robotics in high school.
       </p>
