--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -86,14 +86,8 @@ import Card from "../components/Card.astro";
         language="Javascript"
         languageColor="#f1e05a"
       />
-      <Card
-        href="https://github.com/pinapelz/Sapphire"
-        title="Sapphire (Contributed)"
-        body="A Final Fantasy XIV Server Emulator written in C++"
-        language="C++"
-        languageColor="#f34b7d"
-      />
     </ul>
+    <a href="/contributions"><p>Open Source Contribtuions</p></a>
   </main>
   <SocialNavbar />
   <style>
@@ -104,6 +98,9 @@ import Card from "../components/Card.astro";
       color: white;
       font-size: 20px;
       line-height: 1.6;
+    }
+    a{
+      color: white;
     }
     .link-card-grid {
       display: grid;
