remove minor projects

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -10,7 +10,7 @@ interface Props {
   contribution?: string;
 }
 
-const { href, title, body, language, languageColor, logoSrc, logoWidth = '60%', contribution="Contributor" } = Astro.props;
+const { href, title, body, language, languageColor, logoSrc, logoWidth = '60%', contribution="" } = Astro.props;
 ---
 
 <li class="link-card">
