--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -30,13 +30,6 @@ import Card from "../components/Card.astro";
         languageColor="#b07219"
       />
       <Card
-        href="https://github.com/pinapelz/VTScheduleXIV"
-        title="VTScheduleXIV"
-        body="FFXIV Dalamud plugin that displays the schedule of upcoming VTuber streams in-game"
-        language="C#"
-        languageColor="#178600"
-      />
-      <Card
         href="https://github.com/pinapelz/NijiTrack"
         title="Nijitrack"
         body="Python scripts that records historical subscriber data of YouTube channels and generates HTML reports of the data"
@@ -47,8 +40,8 @@ import Card from "../components/Card.astro";
         href="https://github.com/Patchwork-Archive"
         title="Patchwork Archive"
         body="An archival project for music created by Virtual YouTubers"
-        language="HTML"
-        languageColor="#e34c26"
+        language="Javascript"
+        languageColor="#f1e05a"
       />
       <Card
         href="https://github.com/pinapelz/yet-another-lavaplayer-bot"
@@ -70,14 +63,6 @@ import Card from "../components/Card.astro";
         body="Python Flask link shortener with built in support for custom URLs, special features, and Vercel deployment"
         language="Python"
         languageColor="#3572A5"
-      />
-
-      <Card
-        href="https://github.com/pinapelz/ffxiv-macro-time-counter"
-        title="FFXIV Macro Time Counter"
-        body="Calculator that determines the time it takes to execute a given macro in Final Fantasy XIV with options for consumables"
-        language="Typescript"
-        languageColor="#2b7489"
       />
       <Card
         href="https://github.com/pinapelz/cloudflare-worker-d1-url-shortener"
