update link-shortener moekyun project desc

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -58,8 +58,8 @@ import Card from "../components/Card.astro";
         languageColor="#3572A5"
       />
       <Card
-        href="https://github.com/pinapelz/link-shortener-moekyun.me"
-        title="moekyun.me Link Shortener"
+        href="https://github.com/pinapelz/link-shortener-moe-vercel"
+        title="Vercel Link Shortener (moekyun.me)"
         body="Python Flask link shortener with built in support for custom URLs, special features, and Vercel deployment"
         language="Python"
         languageColor="#3572A5"
