--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -72,7 +72,7 @@ import Card from "../components/Card.astro";
         languageColor="#f1e05a"
       />
     </ul>
-    <a href="/contributions"><p>Open Source Contribtuions</p></a>
+    <a href="/contributions"><p>Open Source Contributions</p></a>
   </main>
   <SocialNavbar />
   <style>
