add tailwind css and overhaul website contents

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,9 +2,10 @@
   <nav>
     <ul>
       <li><a href="/">Home</a></li>
+      <li><a href="/about">About</a></li>
       <li><a href="/coursework">Coursework</a></li>
       <li><a href="/projects">Projects</a></li>
-      <li><a href="/about">About</a></li>
+      <li><a href="https://files.pinapelz.com/ResumeFinalys.pdf">Resume</a></li>
     </ul>
   </nav>
   <img
