--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -6,7 +6,12 @@ import Card from "../components/Card.astro";
 
 <Layout title="Projects">
   <main>
-    <h1>Projects</h1>
+    <h1 class="text-4xl font-semibold text-center py-6">Projects</h1>
+    <p class="text-center mb-4">
+      Here are some of my projects. For a more complete list, visit my <a class="font-bold" href="https://github.com/pinapelz">Github</a>
+      <br/>
+      Visit here for my <a class="font-bold" href="/contributions">open source contributions</a>
+    </p>
     <ul role="list" class="link-card-grid">
       <Card
         href="https://github.com/pinapelz/ytmp3AutoTag"
@@ -14,6 +19,7 @@ import Card from "../components/Card.astro";
         body="JSwing application that downloads YouTube videos as MP3 and automatically tags them with metadata from the video"
         language="Java"
         languageColor="#b07219"
+        logoSrc="https://user-images.githubusercontent.com/21994085/232991117-a41a33e1-f45a-4043-aa6a-e886a31d2f11.png"
       />
       <Card
         href="https://github.com/pinapelz/youtube-timed-playlist"
@@ -21,13 +27,8 @@ import Card from "../components/Card.astro";
         body="React JS web app that allows users to create YouTube playlists with custom start and end times for each video"
         language="Javascript"
         languageColor="#f1e05a"
-      />
-      <Card
-        href="https://github.com/pinapelz/JHolodex"
-        title="JHolodex"
-        body="Object-Oriented Java wrapper for the Holodex API written with Retrofit2"
-        language="Java"
-        languageColor="#b07219"
+        logoWidth="250px"
+        logoSrc="https://github.com/pinapelz/youtube-timed-playlist/assets/21994085/04575380-9b33-46da-9423-84f4809ec268"
       />
       <Card
         href="https://github.com/pinapelz/NijiTrack"
@@ -35,13 +36,26 @@ import Card from "../components/Card.astro";
         body="Python scripts that records historical subscriber data of YouTube channels and generates HTML reports of the data"
         language="Python"
         languageColor="#3572A5"
+        logoSrc="https://github.com/pinapelz/NijiTrack/assets/21994085/c50e959a-34a9-4509-b892-921f6121c33b"
+        logoWidth="300px"
       />
+      <Card
+      href="https://github.com/pinapelz/JHolodex"
+      title="JHolodex"
+      body="Object-Oriented Java wrapper for the Holodex API written with Retrofit2. Published on Maven Central"
+      language="Java"
+      languageColor="#b07219"
+      logoSrc="https://cdn-icons-png.flaticon.com/512/25/25231.png"
+      logoWidth="150px"
+    />
       <Card
         href="https://github.com/Patchwork-Archive"
         title="Patchwork Archive"
-        body="An archival project for music created by Virtual YouTubers"
+        body="An archival system to help streamline the preservation of any subset of YouTube videos"
         language="Javascript"
         languageColor="#f1e05a"
+        logoSrc="https://user-images.githubusercontent.com/21994085/277150135-30b2cabf-07b4-4331-8ebf-709520d42baa.png"
+        logoWidth="300px"
       />
       <Card
         href="https://github.com/pinapelz/yet-another-lavaplayer-bot"
@@ -49,30 +63,37 @@ import Card from "../components/Card.astro";
         body="Self-hosted JDA Discord music bot that uses Lavaplayer to play music from YouTube, Soundcloud, etc in Discord voice channels"
         language="Java"
         languageColor="#b07219"
+        logoWidth="300px"
+        logoSrc="https://user-images.githubusercontent.com/21994085/227810542-26cfb171-9445-4ebf-b57f-575cb5749740.png"
       />
       <Card
         href="https://github.com/pinapelz/vtuber-captcha"
         title="VTuber Captcha"
-        body="Python Flask API that serves fun VTuber related captcha data"
+        body="Python Flask API that serves fun VTuber related captcha data. Answers are checked server-side and are not stored locally"
         language="Python"
         languageColor="#3572A5"
+        logoWidth="200px"
+        logoSrc="https://github.com/pinapelz/vtuber-captcha/assets/21994085/0a286fab-26bd-4865-93bb-be6830db624e"
       />
       <Card
         href="https://github.com/pinapelz/link-shortener-moe-vercel"
         title="Vercel Link Shortener (moekyun.me)"
-        body="Python Flask link shortener with built in support for custom URLs, special features, and Vercel deployment"
+        body="Python Flask link shortener with built in support for custom URLs, special features, and Vercel deployment."
         language="Python"
         languageColor="#3572A5"
+        logoSrc="https://files.catbox.moe/8lgla6.png"
+        logoWidth="350px"
       />
       <Card
         href="https://github.com/pinapelz/cloudflare-worker-d1-url-shortener"
         title="Cloudflare D1 Link Shortener"
-        body="Link shortener that uses Cloudflare Workers and Severless SQL D1 database"
+        body="Link shortener that uses Cloudflare Workers and Severless SQL D1 database. Fully serverless and free to host for anyone with a domain"
         language="Javascript"
         languageColor="#f1e05a"
+        logoWidth="300px"
+        logoSrc="https://cf-assets.www.cloudflare.com/slt3lc6tev37/1W5QoaWTrKT8IwoTrV0uU3/d1deb0a1881d756d346b9a7f04aa5f51/D1.png"
       />
     </ul>
-    <a href="/contributions"><p>Open Source Contributions</p></a>
   </main>
   <SocialNavbar />
   <style>
