--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -15,8 +15,8 @@ import Card from "../components/Card.astro";
     <ul role="list" class="link-card-grid">
       <Card
         href="https://github.com/pinapelz/ytmp3AutoTag"
-        title="ytmp3AutoTag"
-        body="JSwing application that downloads YouTube videos as MP3 and automatically tags them with metadata from the video"
+        title="ytID3AutoTag"
+        body="JSwing application that downloads YouTube videos as MP3 and automatically tags the ID3 fields throughing inferring the video metadata"
         language="Java"
         languageColor="#b07219"
         logoSrc="https://user-images.githubusercontent.com/21994085/232991117-a41a33e1-f45a-4043-aa6a-e886a31d2f11.png"
@@ -33,7 +33,7 @@ import Card from "../components/Card.astro";
       <Card
         href="https://github.com/pinapelz/NijiTrack"
         title="Nijitrack"
-        body="Python scripts that records historical subscriber data of YouTube channels and generates HTML reports of the data"
+        body="Python and Next.JS application that records and collects historical subscriber count for any subset of YouTube channels."
         language="Python"
         languageColor="#3572A5"
         logoSrc="https://github.com/pinapelz/NijiTrack/assets/21994085/c50e959a-34a9-4509-b892-921f6121c33b"
