--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -22,13 +22,13 @@ import Card from "../components/Card.astro";
         logoSrc="https://user-images.githubusercontent.com/21994085/232991117-a41a33e1-f45a-4043-aa6a-e886a31d2f11.png"
       />
       <Card
-        href="https://github.com/pinapelz/youtube-timed-playlist"
-        title="YouTube Timed Playlist"
-        body="React JS web app that allows users to create YouTube playlists with custom start and end times for each video"
-        language="Javascript"
-        languageColor="#f1e05a"
+        href="https://github.com/Patchwork-Archive/Patchwork-Karaoke"
+        title="Patchwork Karaoke"
+        body="A client-side web app that allows the playback of video files synchronzied with both .lrc lyrics and .srv3 subtitles"
+        language="Typescript"
+        languageColor="#3178c6"
         logoWidth="250px"
-        logoSrc="https://github.com/pinapelz/youtube-timed-playlist/assets/21994085/04575380-9b33-46da-9423-84f4809ec268"
+        logoSrc="https://github.com/Patchwork-Archive/Patchwork-Karaoke/assets/21994085/758422b4-4be1-4e4e-a5a0-81b06f3930e5"
       />
       <Card
         href="https://github.com/pinapelz/NijiTrack"
