--- a/src/pages/coursework.astro
+++ b/src/pages/coursework.astro
@@ -23,6 +23,21 @@ const icsCourses = [
     description:
       "Relations and their properties; Boolean algebras, formal languages; finite automata.",
   },
+  {
+    title: "I&C SCI 6D. Discrete Mathematics for Computer Science.",
+    description:
+      "Covers essential tools from discrete mathematics used in computer science with an emphasis on the process of abstracting computational problems and analyzing them mathematically. Topics include mathematical induction, combinatorics, and recurrence relations.",
+  },
+  {
+    title: 'I&C SCI 51. Introductory Computer Organization.',
+    description:
+      "Multilevel view, design, and operation of computer system components. Machine-level data and instruction representation. Instruction sets and addressing modes. Memory organization. Laboratory work using low-level programming languages.",
+  },
+  {
+    title: 'I&C SCI 45C. Programming in C/C++ as a Second Language.',
+    description:
+      "An introduction to the lexical, syntactic, semantic, and pragmatic characteristics of the C/C++ languages for experienced programmers. Emphasis on object-oriented programming, using standard libraries, and programming with manual garbage collection."
+  }
 ];
 
 const in4mtxCourses = [
