--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -85,13 +85,13 @@ import Card from "../components/Card.astro";
         logoWidth="350px"
       />
       <Card
-        href="https://github.com/pinapelz/cloudflare-worker-d1-url-shortener"
-        title="Cloudflare D1 Link Shortener"
-        body="Link shortener that uses Cloudflare Workers and Severless SQL D1 database. Fully serverless and free to host for anyone with a domain"
+        href="https://github.com/pinapelz/youtube-timed-playlist"
+        title="YouTube Timed Playlist"
+        body="React JS web app that allows users to create YouTube playlists with custom start and end times for each video"
         language="Javascript"
         languageColor="#f1e05a"
-        logoWidth="300px"
-        logoSrc="https://cf-assets.www.cloudflare.com/slt3lc6tev37/1W5QoaWTrKT8IwoTrV0uU3/d1deb0a1881d756d346b9a7f04aa5f51/D1.png"
+        logoWidth="250px"
+        logoSrc="https://github.com/pinapelz/youtube-timed-playlist/assets/21994085/04575380-9b33-46da-9423-84f4809ec268"
       />
     </ul>
   </main>
