--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -22,8 +22,8 @@ import Card from "../components/Card.astro";
         logoSrc="https://user-images.githubusercontent.com/21994085/232991117-a41a33e1-f45a-4043-aa6a-e886a31d2f11.png"
       />
       <Card
-        href="https://github.com/Patchwork-Archive/Patchwork-Karaoke"
-        title="Patchwork Karaoke"
+        href="https://github.com/pinapelz/lrc-karaoke-player"
+        title="LRC Karaoke Player"
         body="A client-side web app that allows the playback of video files synchronzied with both .lrc lyrics and .srv3 subtitles"
         language="Typescript"
         languageColor="#3178c6"
